<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/gray"
        android:contentDescription="@string/design" />

    <ImageView
        android:id="@+id/click"
        android:layout_width="200dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/white"
        android:contentDescription="@string/layout" />

    <ImageView
        android:id="@+id/contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/click"
        app:layout_constraintEnd_toEndOf="@+id/click"
        app:layout_constraintStart_toStartOf="@+id/click"
        app:layout_constraintTop_toTopOf="@+id/click"
        app:srcCompat="@drawable/ic_person"
        android:contentDescription="@string/profile" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate GPA"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/contact"
        app:layout_constraintStart_toStartOf="@+id/contact"
        app:layout_constraintTop_toBottomOf="@+id/contact" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/make_things_simple"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/designed_by_joan"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:srcCompat="@drawable/gray" />

    <ImageView
        android:id="@+id/click2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/click"
        app:layout_constraintStart_toStartOf="@+id/click"
        app:layout_constraintTop_toBottomOf="@+id/click"
        app:srcCompat="@drawable/white" />

    <ImageView
        android:id="@+id/person"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/click2"
        app:layout_constraintEnd_toEndOf="@+id/click2"
        app:layout_constraintStart_toStartOf="@+id/click2"
        app:srcCompat="@drawable/ic_person" />

    <TextView
        android:id="@+id/cgpa_cal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Calculate CGPA"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/person"
        app:layout_constraintEnd_toEndOf="@+id/person"
        app:layout_constraintStart_toStartOf="@+id/person" />
</androidx.constraintlayout.widget.ConstraintLayout>